--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -11,7 +11,18 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
 
-    <ScrollView
+    <android.support.v4.widget.DrawerLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/drawer_layout">
+
+       <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+      <ScrollView
         android:id="@+id/weather_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -37,5 +48,17 @@
         </LinearLayout>
 
     </ScrollView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+       <fragment
+           android:id="@+id/choose_area_fragment"
+           android:name="cn.edu.nuc.coolweather.ChooseAreaFragment"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:layout_gravity="start"/>
+
+
+    </android.support.v4.widget.DrawerLayout>
 
 </FrameLayout>
